# DeepLib

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.c
src/mathtools/: CMakeLists.txt  mathtools.h  matrix.c
src/memory/: CMakeLists.txt  memory.c  memory.h
src/network/: CMakeLists.txt  network.c  network.h
